fix: move custom scrollbar styles to index.html for better organization

--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,4 @@
-body{
-  background-color: #121212;
-  color: white;
-}
-  .custom-scrollbar {
-    scrollbar-color: rgba(255, 255, 255, 0.3) transparent; 
-  }
 
-  .custom-scrollbar::-webkit-scrollbar {
-    width: 8px;
-    height: 2px;
-  }
-
-  .custom-scrollbar::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 10px;
-  }
-
-  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
 .nav_bar .login{
   background: rgba(255, 255, 255, 0.1); 
   backdrop-filter: blur(10px);
